--- a/static/tpl/electro/store.html
+++ b/static/tpl/electro/store.html
@@ -10,21 +10,11 @@
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
-
- 		<!-- Bootstrap -->
- 		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
-
- 		<!-- Slick -->
- 		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
- 		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
-
- 		<!-- nouislider -->
- 		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
-
- 		<!-- Font Awesome Icon -->
- 		<link rel="stylesheet" href="css/font-awesome.min.css">
-
- 		<!-- Custom stlylesheet -->
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/slick.css"/>
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/slick-theme.css"/>
+ 		<link type="text/css" rel="stylesheet" href="{% static 'css/nouislider.min.css"/>
+ 		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css">
  		<link type="text/css" rel="stylesheet" href="css/style.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -841,12 +831,12 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/nouislider.min.js"></script>
-		<script src="js/jquery.zoom.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="{% static js/jquery.min.js %}"></script>
+		<script src="{% static js/bootstrap.min.js %}"></script>
+		<script src="{% static js/slick.min.js %}"></script>
+		<script src="{% static js/nouislider.min.js %}"></script>
+		<script src="{% static js/jquery.zoom.min.js %}"></script>
+		<script src="{% static js/main.js %}"></script>
 
 	</body>
 </html>
